--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,16 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "display": "Node LTS",
   "_version": "20.1.0",
+
   "compilerOptions": {
-    "lib": [
-      "esnext"
-    ],
-    "module": "esnext",
-    "target": "esnext",
+    "lib": ["es2023"],
+    "module": "node16",
+    "target": "es2022",
+
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "node16",
-    "baseUrl": "/",
-    "outDir": "dist",
-    "sourceMap": true,
-    "noImplicitAny": true
+    "moduleResolution": "node16"
   },
-  "include": [
-    "src/**/*",
-    "index.ts"
-  ]
+  "include": ["src/**/*", "index.ts"]
 }
