--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
+    "@prisma/client": "^5.17.0",
     "fastify": "^4.28.0",
-    "tsup": "^8.1.0",
-    "tsx": "^4.15.7"
+    "fastify-type-provider-zod": "^2.0.0",
+    "prisma": "^5.17.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20.14.9"
+    "@types/node": "^20.14.9",
+    "tsup": "^8.1.0",
+    "tsx": "^4.15.7",
+    "typescript": "^5.5.3"
   }
 }
