--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@fastify/swagger": "^8.15.0",
+    "@fastify/swagger-ui": "^4.0.1",
     "@prisma/client": "^5.17.0",
+    "bcrypt": "^5.1.1",
     "fastify": "^4.28.0",
     "fastify-type-provider-zod": "^2.0.0",
     "prisma": "^5.17.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.14.9",
     "tsup": "^8.1.0",
     "tsx": "^4.15.7",
