--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,14 @@
 {
   "builds": [
     {
-      "src": "./dist/index.js",
-      "use": "@vercel/node",
-      "config": {
-        "maxLambdaSize": "50mb"
-      }
+      "src": "./dist/index.ts",
+      "use": "@now/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/dist/index.js"
+      "dest": "/index.ts"
     }
   ]
 }
