--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,13 @@
   "builds": [
     {
       "src": "./dist/index.js",
-      "use": "@now/node"
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "./dist/index.js"
+      "dest": "/dist/index.js"
     }
   ]
 }
