--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,10 @@
   "version": 2,
   "builds": [
     {
-      "src": "dist/teste.js",
-      "use": "@vercel/node"
+      "src": "./src/index.ts",
+      "use": "@vercel/node",
+      "config": { "distDir": "dist" }
     }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "dist/teste.js"
-    }
-  ]
+  "routes": [{ "src": "/(.*)", "dest": "/dist/index.js" }]
 }
