--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,6 @@
     "outDir": "./build",
     "rootDir": "./src"
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
