--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,18 @@
 {
   "version": 2,
-  "builds": [{ "src": "src/index.ts", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "src/index.ts" }],
+  "builds": [
+    { "src": "package.json", "use": "@vercel/static" },
+    {
+      "src": "src/index.ts",
+      "use": "@vercel/node",
+      "config": { "includeFiles": ["build/**"] }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "build/index.js"
+    }
+  ],
   "outputDirectory": "build"
 }
