--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20.14.9",
+    "@types/node": "^20.14.15",
+    "ts-node": "^10.9.2",
     "tsup": "^8.1.0",
     "tsx": "^4.15.7",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.4"
   }
 }
