--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "node build/index.js",
+    "build": "tsup src --format esm",
+    "start": "prisma migrate deploy && node dist/index.js",
     "dev": "tsx --inspect --watch --trace-warnings src/index.ts"
   },
   "keywords": [],
