--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,7 @@
       ]
     },
     "target": "ES2020",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "CommonJS",
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
