--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,9 @@
         "src/*"
       ]
     },
-    "target": "ES2020",
     "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "target": "ES2020",
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
