--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "tsup src --format esm",
+    "build": "tsc",
     "start": "prisma migrate deploy && node dist/index.js",
     "dev": "tsx --inspect --watch --trace-warnings src/index.ts",
     "postinstall": "prisma generate"
